# portfolio_management

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/app/: pyproject.toml
