[project]
name = "portfolio-management"
version = "0.1.0"
description = "A project help user control their portfolio investment"
readme = "README.md"
authors = [{name = "Nguyen Son", email = "sonnguyenthanh.vnu@gmail.com"}]
requires-python = ">=3.13.1"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.2",
]


[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]